; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_sig.c_process_sigusr2.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_sig.c_process_sigusr2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.context = type { i32 }
%struct.status_output = type { i32 }

@M_INFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.context*)* @process_sigusr2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_sigusr2(%struct.context* %0) #0 {
  %2 = alloca %struct.context*, align 8
  %3 = alloca %struct.status_output*, align 8
  store %struct.context* %0, %struct.context** %2, align 8
  %4 = load i32, i32* @M_INFO, align 4
  %5 = call %struct.status_output* @status_open(i32* null, i32 0, i32 %4, i32* null, i32 0)
  store %struct.status_output* %5, %struct.status_output** %3, align 8
  %6 = load %struct.context*, %struct.context** %2, align 8
  %7 = load %struct.status_output*, %struct.status_output** %3, align 8
  %8 = call i32 @print_status(%struct.context* %6, %struct.status_output* %7)
  %9 = load %struct.status_output*, %struct.status_output** %3, align 8
  %10 = call i32 @status_close(%struct.status_output* %9)
  %11 = load %struct.context*, %struct.context** %2, align 8
  %12 = getelementptr inbounds %struct.context, %struct.context* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @signal_reset(i32 %13)
  ret void
}

declare dso_local %struct.status_output* @status_open(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @print_status(%struct.context*, %struct.status_output*) #1

declare dso_local i32 @status_close(%struct.status_output*) #1

declare dso_local i32 @signal_reset(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
